2007-03-30  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Define POSIX types only when compiling with Visual C++.
	* network.h,
	* windows.hh: Here. Because MinGW has these types but hasn't got
	Visual's UINT*/INT*.

2007-03-30  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Improve portability on Windows.
	* network.h (socklen_t): typedef as UINT32 instead of int.
	(in_addr_t): New (32-bit unsigned integer).
	* windows.hh (uint8_t, int8_t, uint16_t, int16_t, uint32_t, int32_t,
	uint64_t, int64_t): Add typedefs for these POSIX types.

2007-03-23  Akim Demaille  <demaille@gostai.com>

	* libport/compiler.hh: Include iostream when needed.

2007-03-08  Akim Demaille  <akim.demaille@free.fr>

	* libport.mk: Fix EXTRA_DIST assignment..

2007-03-08  Akim Demaille  <demaille@gostai.com>

	I don't understand how it managed to remain unnoticed.
	* libport.mk (EXTRA_DIST): Ship libport_sources.

2007-03-04  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Cleanup the NOMINMAX issue.
	* ChangeLog: Cleanup a ChangeLog entry.
	* windows.hh: Define NOMINMAX to 1 (which is what MinGW does) and
	don't undefine it (that would be lying).

2007-03-02  Matthieu Nottale  <nottale@gostai.com>

	Revert commit 628
	* singleton-ptr.hh: Restore STATIC_INSTANCE which is used to define
	multiple "singleton" of the same class (reason: delay initialisation
	of object to first time its needed).

2007-03-01  Akim Demaille  <demaille@gostai.com>

	* libport-sources.mk (libportdir): No longer define it.

2007-02-25  Akim Demaille  <akim.demaille@free.fr>

	Avoid useless class definitions
	* singleton-ptr.hh (STATIC_INSTANCE, EXTERN_STATIC_INSTANCE):
	There is no need to introduce a specific class for each
	Class,Name combination.

2007-02-24  Akim Demaille  <akim.demaille@free.fr>

	Mingw portability
	* windows.hh: Don't define NOMINMAX blindly, it may have already
	be defined.

2007-02-21  Remi Humbert  <humbert@gostai.com>

	Fix semaphore: sem_wait interrupted by signal must be restarted